--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         <div class="container">
             
             <!-- Image Logo -->
-            <a class="navbar-brand logo-image" href="index.html"><img src="images/header-logo.png" alt="alternative" style="width: auto; height: 20px"></a>  
-
+<!--             <a class="navbar-brand logo-image" href="index.html"><img src="images/header-logo.png" alt="alternative" style="width: auto; height: 20px"></a>  
+ -->
             <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <!-- <a class="navbar-brand logo-text page-scroll" href="index.html">Spify</a> -->
+            <a class="navbar-brand logo-text page-scroll" href="index.html">DivBox</a>
 
             <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
