--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
         <div class="container">
             
             <!-- Image Logo -->
-<!--             <a class="navbar-brand logo-image" href="index.html"><img src="images/header-logo.png" alt="alternative" style="width: auto; height: 20px"></a>  
- -->
-            <!-- Text Logo - Use this if you don't have a graphic logo -->
-            <a class="navbar-brand logo-text page-scroll" href="index.html">DivBox</a>
+            <a class="navbar-brand logo-image" href="index.html"><img src="images/header-logo.png" alt="alternative" style="width: auto; height: 20px"></a>  
 
+            <!-- Text Logo - Use this if you don't have a graphic logo -->
+<!--             <a class="navbar-brand logo-text page-scroll" href="index.html">DivBox</a>
+ -->
             <button class="navbar-toggler p-0 border-0" type="button" data-toggle="offcanvas">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -71,7 +71,7 @@
                 <div class="col-lg-6">
                     <div class="text-container">
                         <h3>A place where your cryto can earn dividends instead of lying idle in your wallet.</h3>
-                        <a class="btn-solid-lg" href="./app" target="_blank">App</a>
+                        <a class="btn-solid-lg" href="./app" target="_blank">Launch App</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
@@ -87,8 +87,8 @@
                                 <i class="fas fa-dollar-sign"></i>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Fund</h5>
-                                <div class="card-text">Load your wallet with funds that you want to see grow</div>
+                                <h5 class="card-title">Connect</h5>
+                                <div class="card-text">Install Metamask and connect it to DivBox</div>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -99,8 +99,8 @@
                                 <i class="fas fa-parking"></i>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Park</h5>
-                                <div class="card-text">Use those funds to buy shares in DivBox</div>
+                                <h5 class="card-title">Fund</h5>
+                                <div class="card-text">Buy shares in DivBox</div>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -131,9 +131,13 @@
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">
-                        <h2>Fund</h2>
+                        <h2>Connect</h2>
                         <hr class="hr-heading">
-                        <p>Load your wallet with funds that you want to see grow.</p>
+			    <ul>
+				    <li>First line</li>
+				    <li>First line</li>
+			    </ul>
+                        <p>Download and install MetaMask.</p>
                         <p>TODO: need some more text and a better image too... </p>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
