--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Connect</h5>
-                                <div class="card-text">Install Metamask and connect it to DivBox</div>
+                                <div class="card-text">Connect your Web3 Wallet to DivBox</div>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -100,7 +100,7 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Fund</h5>
-                                <div class="card-text">Buy shares in DivBox</div>
+                                <div class="card-text">Deposit ETH and buy some shares</div>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -111,8 +111,8 @@
                                 <i class="fas fa-coins"></i>
                             </div>
                             <div class="card-body">
-                                <h5 class="card-title">Enjoy</h5>
-                                <div class="card-text">Enjoy watching the shares go up and earn you dividends</div>
+                                <h5 class="card-title">Earn</h5>
+                                <div class="card-text">Enjoy watching your shares go up and earn dividends</div>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -133,10 +133,10 @@
                     <div class="text-container">
                         <h2>Connect</h2>
                         <hr class="hr-heading">
-			    <ul>
-				    <li>First line</li>
-				    <li>First line</li>
-			    </ul>
+			    <ol>
+				    <li>Install a Web3 Wallet, like Metamask.</li>
+				    <li>Fund it with some ETH. </li>
+			    </ol>
                         <p>Download and install MetaMask.</p>
                         <p>TODO: need some more text and a better image too... </p>
                     </div> <!-- end of text-container -->
