--- a/index.html
+++ b/index.html
@@ -84,11 +84,10 @@
                         <!-- Card -->
                         <div class="card">
                             <div class="card-image">
-                                <i class="fas fa-dollar-sign"></i>
+                                <i class="fas fa-plug"></i>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Connect</h5>
-                                <div class="card-text">Connect your Web3 Wallet to DivBox</div>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -96,11 +95,10 @@
                         <!-- Card -->
                         <div class="card">
                             <div class="card-image">
-                                <i class="fas fa-parking"></i>
+                                <i class="fas fa-dollar-sign"></i>
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Fund</h5>
-                                <div class="card-text">Deposit ETH and buy some shares</div>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -112,7 +110,6 @@
                             </div>
                             <div class="card-body">
                                 <h5 class="card-title">Earn</h5>
-                                <div class="card-text">Enjoy watching your shares go up and earn dividends</div>
                             </div>
                         </div>
                         <!-- end of card -->
@@ -133,12 +130,16 @@
                     <div class="text-container">
                         <h2>Connect</h2>
                         <hr class="hr-heading">
-			    <ol>
-				    <li>Install a Web3 Wallet, like Metamask.</li>
-				    <li>Fund it with some ETH. </li>
-			    </ol>
-                        <p>Download and install MetaMask.</p>
-                        <p>TODO: need some more text and a better image too... </p>
+                        <ul class="list-unstyled li-space-lg">
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body">Install a Web3 Wallet, like Metamask.</div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body">Connect it to DivBox.</div>
+                            </li>
+                        </ul>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
@@ -163,11 +164,19 @@
                 </div> <!-- end of image-area -->
                 <div class="text-area">
                     <div class="text-container">
-                        <h2>Park</h2>
+                        <h2>Fund</h2>
                         <hr class="hr-heading">
-                        <p>Use those funds to buy shares in DivBox</p>
-                        <p>TODO: need some more text and a better image too... </p>
-                    </div> <!-- end of text-container -->
+                        <ul class="list-unstyled li-space-lg">
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body">Fund your wallet with some ETH.</div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
+                                <div class="media-body">Buy shares in DivBox.</div>
+                            </li>
+                        </ul>
+			</div> <!-- end of text-container -->
                 </div> <!-- end of text-area -->
             </div> <!-- end of row -->
         </div> <!-- end of container-fluid -->
@@ -180,23 +189,20 @@
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">
-                        <h2>Enjoy</h2>
+                        <h2>Earn</h2>
                         <hr class="hr-heading">
-                        <p>Enjoy watching the shares go up and earn you dividends</p>
-                        <p>Perhaps we can explain more about how shares go up and dividends are earned?</p>
-                        <p>Maybe we can use bullet points...</p>
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Line 1...</div>
+                                <div class="media-body">Enjoy watching your shares go up in value by simply holding them.</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Line 2...</div>
+                                <div class="media-body">Earn dividends whenever other users buy and sell shares their shares.</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Line 3...</div>
+                                <div class="media-body">Sell shares for a profit and at any time.</div>
                             </li>
                         </ul>
                     </div> <!-- end of text-container -->
