--- a/index.html
+++ b/index.html
@@ -44,9 +44,6 @@
                         <a class="nav-link page-scroll" href="#details">How it works</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#strengths">TODO: new section?</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link page-scroll" href="./whitepaper.pdf" target="_blank"><i class="fas fa-file"></i> Whitepaper</a>
                     </li>
                     <li class="nav-item">
@@ -70,7 +67,7 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6">
                     <div class="text-container">
-                        <h3>A place where your cryto can earn dividends instead of lying idle in your wallet.</h3>
+                        <h3>A place where your ETH can earn dividends instead of lying idle in your wallet.</h3>
                         <a class="btn-solid-lg" href="./app" target="_blank">Launch App</a>
                     </div> <!-- end of text-container -->
                 </div> <!-- end of col -->
@@ -219,30 +216,13 @@
 
 
 
-    <!-- Strengths -->
-    <div id="strengths" class="basic-5">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <h4>TODO: New section needed?</h4>
-                    <p>TODO: Anything else we should add before call to action? </p>
-                </div> <!-- end of col-lg-12 -->
-            </div> <!-- end of row -->
-        </div> <!-- end of container -->
-    </div> <!-- end of basic-5 -->
-    <!-- end of strengths -->
-
-
-
-
     <!-- Invitation -->
     <div class="basic-7">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <h4>TODO: add some call to action text?</h4>
-                    <h4>DivBox is still in the testnet, so should we explicitly mention that?</h4>
-                    <a class="btn-solid-lg page-scroll" href="./app" target="_blank">App</a>
+                    <h4>Start earning now</h4>
+                    <a class="btn-solid-lg page-scroll" href="./app" target="_blank">Launch App</a>
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
         </div> <!-- end of container -->
