--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
             <div class="navbar-collapse offcanvas-collapse" id="navbarsExampleDefault">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#header">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link page-scroll" href="#header"><i class="fas fa-home"></i> Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link page-scroll" href="#details">How it works</a>
+                        <a class="nav-link page-scroll" href="#details"><i class="fas fa-cogs"></i> How it works</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link page-scroll" href="./whitepaper.pdf" target="_blank"><i class="fas fa-file"></i> Whitepaper</a>
