--- a/index.html
+++ b/index.html
@@ -195,11 +195,11 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Earn dividends whenever other users buy and sell shares their shares.</div>
+                                <div class="media-body">Earn dividends whenever other users buy and sell shares.</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Sell shares for a profit and at any time.</div>
+                                <div class="media-body">Sell shares for a profit at any time.</div>
                             </li>
                         </ul>
                     </div> <!-- end of text-container -->
