--- a/index.html
+++ b/index.html
@@ -148,20 +148,14 @@
         </div> <!-- end of container -->
     </div> <!-- end of basic-1 -->
     <!-- end of details 1 -->
-
-
-    <!-- Details 2 -->
-    <div class="basic-2">
-        <div class="container-fluid">
+	
+  <!-- Details 3 -->
+    <div class="basic-3">
+        <div class="container">
             <div class="row">
-                <div class="image-area">
-                    <div class="image-container">
-                        <img class="img-fluid" src="images/details-2.jpg" alt="alternative">
-                    </div> <!-- end of image-container -->
-                </div> <!-- end of image-area -->
-                <div class="text-area">
+                <div class="col-lg-6 col-xl-5">
                     <div class="text-container">
-                        <h2>Fund</h2>
+                        <h2>Earn</h2>
                         <hr class="hr-heading">
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
@@ -173,13 +167,18 @@
                                 <div class="media-body">Buy shares in DivBox.</div>
                             </li>
                         </ul>
-			</div> <!-- end of text-container -->
-                </div> <!-- end of text-area -->
+                    </div> <!-- end of text-container -->
+                </div> <!-- end of col -->
+                <div class="col-lg-6 col-xl-7">
+                    <div class="image-container">
+                        <img class="img-fluid" src="images/article-details-large.jpg" alt="alternative">
+                    </div> <!-- end of image-container -->
+                </div> <!-- end of col -->
             </div> <!-- end of row -->
-        </div> <!-- end of container-fluid -->
-    </div> <!-- end of basic-1 -->
-    <!-- end of details 2 -->
-
+        </div> <!-- end of container -->
+    </div> <!-- end of basic-3 -->
+    <!-- end of details 3 -->
+	
     <!-- Details 3 -->
     <div class="basic-3">
         <div class="container">
