--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
             <div class="row">
                 <div class="col-lg-6 col-xl-5">
                     <div class="text-container">
-                        <h2>Earn</h2>
+                        <h2>Fund</h2>
                         <hr class="hr-heading">
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Fund your wallet with some ETH.</div>
+                                <div class="media-body">Deposit some ETH to your wallet.</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
