--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
                 </div> <!-- end of col -->
                 <div class="col-lg-6 col-xl-7">
                     <div class="image-container">
-                        <img class="img-fluid" src="images/article-details-large.jpg" alt="alternative">
+                        <img class="img-fluid" src="images/img-3.png" alt="alternative">
                     </div> <!-- end of image-container -->
                 </div> <!-- end of col -->
             </div> <!-- end of row -->
