--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                         <ul class="list-unstyled li-space-lg">
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Install a Web3 Wallet, like <a href="https://metamask.io/" target="_blank">Metamask</a>.</div>
+                                <div class="media-body">Install a Web3 Wallet, like <a href="https://metamask.io/" target="_blank">MetaMask</a>.</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
