--- a/index.html
+++ b/index.html
@@ -198,6 +198,10 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
+                                <div class="media-body">Buy more shares to increase your holding power and earn even more dividends.</div>
+                            </li>
+                            <li class="media">
+                                <i class="fas fa-square"></i>
                                 <div class="media-body">Sell shares for a profit at any time.</div>
                             </li>
                         </ul>
