--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
-                                <div class="media-body">Buy shares in DivBox.</div>
+                                <div class="media-body">Buy shares in DivBox and grow your holding power.</div>
                             </li>
                         </ul>
                     </div> <!-- end of text-container -->
@@ -195,10 +195,6 @@
                             <li class="media">
                                 <i class="fas fa-square"></i>
                                 <div class="media-body">Earn dividends whenever other users buy and sell shares.</div>
-                            </li>
-                            <li class="media">
-                                <i class="fas fa-square"></i>
-                                <div class="media-body">Buy more shares to increase your holding power and earn even more dividends.</div>
                             </li>
                             <li class="media">
                                 <i class="fas fa-square"></i>
